# eagine-eglplus

./: .ycm_extra_conf.py  CMakeLists.txt  README.rst
config/: EAGinePackageEGLplus.cmake  FindEAGineEGL.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/apps/: CMakeLists.txt  build-pkg.sh.in  build-pkg.txt.in
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in
doc/doxygen/include/: eglplus.hpp
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt
example/eagine/: CMakeLists.txt
example/eagine/eglplus/: 001_basic_info.cpp  002_list_apis.cpp  003_list_extensions.cpp  005_list_configs.cpp  006_multisample_configs.cpp  007_depth_stencil_configs.cpp  008_list_extensions.cpp  CMakeLists.txt  deb-changelog
include/: CMakeLists.txt  Sources.cmake
include/eagine/eglplus/: basic_egl_api.hpp  egl.hpp  egl_api.hpp  egl_api.inl  egl_api_fwd.hpp  egl_fallback.hpp
include/eagine/eglplus/config/: basic.hpp
include/eagine/eglplus/egl_api/: api.hpp  api.inl  api_traits.hpp  api_traits.inl  c_api.hpp  c_api.inl  config.hpp  config_attribs.hpp  constants.hpp  constants.inl  context_attribs.hpp  enum_class.hpp  enum_types.hpp  extensions.hpp  image_attribs.hpp  objects.hpp  output_layer_attribs.hpp  output_port_attribs.hpp  platform_attribs.hpp  result.hpp  stream_attribs.hpp  surface_attribs.hpp  sync_attribs.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  deb-changelog
source/app/list_devices/: CMakeLists.txt  main.cpp
source/app/list_devices/etc/eagine/templates/: eagine-list-egl-devices.yaml
source/app/list_devices/resource/: eagine-list-egl-devices.bco  eagine-list-egl-devices.man
source/lib/: CMakeLists.txt
source/lib/eagine-eglplus/: CMakeLists.txt
source/modules/eagine/: CMakeLists.txt  api.cpp  api_traits.cpp  attributes.cpp  c_api.cpp  config.cpp  constants.cpp  constants_impl.cpp  constants_test.cpp  deb-changelog  eglplus.cpp  enum_types.cpp  extensions.cpp  from_string.cpp  objects.cpp  result.cpp
